working on gif images

--- a/webapp/poll/index.html
+++ b/webapp/poll/index.html
@@ -19,6 +19,10 @@
 		</ul>
 	</header>
 	<div class="center">
+		<ul class="imgWrapper clearfix">
+			<li><img src="../img/beUK.gif"></li>
+		 	<li><img src="../img/dontbeUK.gif"></li>
+		</ul>
 		<form action="" id="poll" class="imgBG">
 			 <ul class="list">
 		 		<li><span class="box"><input type="radio" value="0" name="remain" class="radioBtn"></span></li>
