--- a/webapp/poll/index.html
+++ b/webapp/poll/index.html
@@ -20,8 +20,8 @@
 	</header>
 	<div class="center">
 		<ul class="imgWrapper clearfix">
-			<li><img src="../img/beUK.gif"></li>
-		 	<li><img src="../img/dontbeUK.gif"></li>
+			<li><img src="../img/left.gif"></li>
+		 	<li><img src="../img/right.gif"></li>
 		</ul>
 		<form action="" id="poll" class="imgBG">
 			 <ul class="list">
