basic loading animated gif for images

--- a/webapp/poll/index.html
+++ b/webapp/poll/index.html
@@ -47,6 +47,11 @@
 		</div>
 		<span class="close">x</span>
 	</div>
+	<div class="loading">
+		<div class="wrapper">
+			<p>Loading ...</p>
+		</div>
+	</div>
 	<footer id="footer">
 		&copy; slackwise LTD
 	</footer>
